--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.1",
     "node-fetch": "^3.2.6",
     "puppeteer": "^15.2.0"
   }
