--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "connect-timeout": "^1.9.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "helmet": "^5.1.0",
-    "node-fetch": "^3.2.6",
     "nodemon": "^2.0.18",
     "puppeteer": "^15.2.0"
   },
