--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "scraping.js",
   "scripts": {
     "start": "node scraping.js",
-    "dev": "nodemon scraping.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "dev": "nodemon scraping.js"
   },
   "author": "",
   "license": "ISC",
