agregando capas de logica

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "scraping-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "Cotizador de Precios",
   "main": "scraping.js",
   "scripts": {
-    "start": "node scraping.js",
+    "start": "nodemon app.js",
     "test": "node test.js",
     "dev": "nodemon scraping.js"
   },
-  "author": "",
+  "author": "Sebastian Sepulveda",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
