--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scraping-test",
   "version": "1.0.0",
   "description": "Cotizador de Precios",
-  "main": "scraping.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "node test.js",
